2011-11-01 Jesse Kornblum <research@jessekornblum.com>

	* configure.ac: Version bump to 4.0 beta1

2011-10-28  Simson Garfinkel  <simsong@imac3.home>

	* configure.ac (HAVE_PTHREAD): fixed for multithreading error on macos and linux (it wasn't turning on)

2011-10-26  Simson Garfinkel  <simsong@imac3.home>

	* configure.ac: beta counter incremented to beta2

	* tests/tests.sh: added code for test 47 to cover new audit mode generating more output.

	* src/display.cpp (display::audit_update): audit output was going to cerr; should go to cout.

	* src/threadpool.cpp (ERR): changed from fprintf to cerr; added __noreturn__ attribute.

	* src/files.cpp (state::md5deep_load_match_file): file_type no longer shadows member of this.

	* src/xml.cpp (XML::comment): comment no longer shadows local member

	* src/dig.cpp (print_last_error): now uses cerr instead of fprintf; turns pszMessage into UTF8

	* src/main.h (class display): added __attribute__ ((__noreturn__)) to internal_error().

	* src/common.h (tstring): somehow we got a ; before the wstring. Removed it.

2011-10-25  Simson Garfinkel  <simsong@imac3.home>

	* src/dig.cpp (state::dig_self_test): added explicit cast to ft to avoid compiler warning.

	* src/main.h (class global): renamed class main to class global so that main() doesn't shadow main::main() (which doesn't exist)

	* src/main.cpp (state::hashdeep_process_command_line): renamed argc and argv to argc_ and argv_ so as not to shadow instance variables.

	* src/display.cpp (display::finalize_matching): removed known_size() as a local, since we have a function that does it.
	(display::compute_unused): renamed parameter from display to show_display to avoid compiler warning.

	* src/main.h (class display): renamed out to out_ so as not to shadow parameter.
	(std::vector): removed num_columns, as it wasn't being used outside the local function.

2011-10-17  Simson Garfinkel  <simsong@Alphonse-Mucha.local>
